Tue Mar  2 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMatrix.m: Tracking fixes by Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSControl.m: Fix setting of cell states by Benhur
	* Source/NSCell.m: Toggle cell state in mouse tracking

Tue Mar  2 08:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Merge in 'dawn' CVS branch.

Mon Mar  1 20:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Removed PSMatrix - replaced by NSAffineTransform
	* Headers/AppKit/NSAffineTransform.h: New file based on PSMatrix.h
	* Source/NSAffineTransform.m: New file based on PSMatrix.m
	* Source/NSView.m: Modified to use NSAffineTransformAffineTransform
	* Source/GNUmakefile: Added NSAffineTransform
	* Source/NSCell.m: Don't include PSMatrix.h
	* Source/NSScroller.m: Don't include PSMatrix.h
	* Source/NSView.m: Use NSAffineTransform
	* Source/NSWindow.m: Don't include PSMatrix.h

Mon Mar  1 17:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSCell.h: Added MacOS-X cell state constants.

1999-03-01  Adam Fedor  <fedor@gnu.org>

	* Update documentation.

Thu Feb 25 15:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added support for the new (MacOS-X) NSGraphicsContext class by
	incorporating stuff from Adam Fedors xgps and replacing GSContext
	* Headers/AppKit/DPSOperators.h: New file
	* Headers/AppKit/PSOperators.h: New file
	* Headers/AppKit/GSMethodTable.h: New file
	* Headers/AppKit/NSGraphicsContext.h: New file
	* Source/NSGraphicsContext.m: New class implementation
	* Headers/AppKit/AppKit.h: Updated for NSGraphicsContext
	* Headers/AppKit/NSApplication.h: ditto
	* Headers/AppKit/NSEvent.h: ditto
	* Headers/AppKit/NSImage.h: ditto
	* Headers/AppKit/NSPrintOperation.h: ditto
	* Headers/AppKit/NSView.h: ditto
	* Headers/AppKit/NSWindow.h: ditto
	* Source/Functions.m: ditto
	* Source/GNUmakefile: ditto
	* Source/NSApplication.m: ditto
	* Source/NSButtonCell.m: ditto