@@ -1,3 +1,8 @@
+Tue Mar  2 13:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSView.m: Bugfix in redisplay - avoid views being redrawn
+	when not needed - hope I didn't break anything - this stuff is tricky.
+
 Tue Mar  2 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSMatrix.m: Tracking fixes by Benhur-de-Oliveira.Stein@imag.fr
